# wwise2013

./: .gitattributes  .gitignore
.github/workflows/: ci.yml
GameSimulator/Help/: GameSimulator.chm
GameSimulator/Scripts/: AkBankMem.lua  AkSampleIntegrationDemo.lua  AkSampleMotion.lua  AkSampleNoCoroutines.lua  AkSampleUserInput.lua  AkSampleWithCoroutines.lua
GameSimulator/Scripts/audiokinetic/: AkLuaFramework.lua
SDK/: CMakeLists.txt  CMakePresets.json
SDK/include/AK/SoundEngine/Common/: AkMemoryMgr.h  AkSoundEngine.h  AkTypes.h  IAkPlatformContext.h
SDK/include/AK/Tools/Common/: AkPlatformFuncs.h
SDK/include/AK/Tools/Linux/: AkPlatformFuncs.h
SDK/samples/IntegrationDemo/: CMakeLists.txt
SDK/samples/IntegrationDemo/Common/: AllSrcPluginsRegistrationHelpers.h  IntegrationDemo.cpp
SDK/samples/IntegrationDemo/Linux/: stdafx.h
SDK/samples/IntegrationDemo/MenuSystem/: Drawing.h
SDK/samples/IntegrationDemo/Windows/: Drawing.cpp  IntegrationDemo_Windows_vc170.sln  IntegrationDemo_Windows_vc170.vcxproj  stdafx.h
SDK/samples/Plugins/AkMP3Source/Sources/AudioEngineFX/: CMakeLists.txt
SDK/samples/SoundEngine/Win32/: AkSoundEngineDLL.cpp  AkSoundEngineDLL_vc170.vcxproj
SDK/source/SoundEngine/: AllWindowsSoundEngine_vc170.sln
SDK/source/SoundEngine/AkAudiolib/: CMakeLists.txt
SDK/source/SoundEngine/AkAudiolib/Common/: AkPrivateTypes.h  AkRuntimeEnvironmentMgr.cpp  AkRuntimeEnvironmentMgr.h
SDK/source/SoundEngine/AkAudiolib/Linux/: AkLEngine.cpp  AkLEngine.h  AkSink.h
SDK/source/SoundEngine/AkAudiolib/POSIX/: AkAudioThread.cpp
SDK/source/SoundEngine/AkMemoryMgr/: CMakeLists.txt
SDK/source/SoundEngine/AkMemoryMgr/Linux/: stdafx.h
SDK/source/SoundEngine/AkMusicEngine/: CMakeLists.txt
SDK/source/SoundEngine/Codecs/AkVorbisDecoder/: CMakeLists.txt
SDK/source/SoundEngine/Communication/Remote/: CMakeLists.txt
SDK/source/SoundEngine/Communication/Remote/PC/: stdafx.h
SDK/source/SoundEngine/Communication/Remote/POSIX/: GameSocket.cpp  Network.cpp
SDK/source/SoundEngine/Plugins/Effects/AkCompressor/: CMakeLists.txt
SDK/source/SoundEngine/Plugins/Motion/Sources/MotionGenerator/: AkMotionGenerator.h
SDK/source/StreamManager/: CMakeLists.txt
SDK/source/StreamManager/Common/: AkDeviceBase.cpp  AkDeviceBase.h  AkDeviceBlocking.cpp  AkDeviceBlocking.h  AkDeviceDeferredLinedUp.cpp  AkDeviceDeferredLinedUp.h  AkIOMemMgr.h  AkStmDeferredLinedUpBase.h  AkStmDeferredLinedUpBase.inl  AkStmMemView.h  AkStreamMgr.cpp  AkStreamMgr.h  AkTransferDeferred.cpp  AkTransferDeferred.h
SDK/source/StreamManager/Metro/: AkStreamMgrMetro_vc110.vcxproj  AkStreamMgrMetro_vc110.vcxproj.filters  AkStreamMgrMetro_vc120.vcxproj  AkStreamMgrMetro_vc120.vcxproj.filters  stdafx.h
SDK/source/StreamManager/Win32/: AkStreamMgrPC_vc100.sln  AkStreamMgrPC_vc110.sln  AkStreamMgrPC_vc90.sln  AkStreamMgrWindows_vc100.vcxproj  AkStreamMgrWindows_vc100.vcxproj.filters  AkStreamMgrWindows_vc110.vcxproj  AkStreamMgrWindows_vc110.vcxproj.filters  AkStreamMgrWindows_vc90.vcproj
Sample Project/: SampleProject.wproj
Sample Project/Actor-Mixer Hierarchy/: Car Engine.wwu  Default Work Unit.wwu  Dialogues.wwu  Factory SoundSeed Air Objects.wwu  Footsteps.wwu  Minigun.wwu  NYC Ambience.wwu  SS_Impact.wwu
Sample Project/Attenuations/: Ambience.wwu  Default Work Unit.wwu  Footsteps.wwu  Migrated 3D Positioning.wwu  Minigun.wwu
Sample Project/Conversion Settings/: Default Work Unit.wwu
Sample Project/Dynamic Dialogue/: Default Work Unit.wwu  Dialogue.wwu
Sample Project/Effects/: Default Work Unit.wwu  Environments.wwu  Factory Convolution Reverb Effects.wwu  Factory Effects.wwu
Sample Project/Events/: Ambience.wwu  Car Engine.wwu  Default Work Unit.wwu  Footsteps.wwu  Minigun.wwu  Music.wwu
Sample Project/Game Parameters/: Ambience.wwu  Car Engine.wwu  Default Work Unit.wwu  Music.wwu  SS_Impact.wwu
Sample Project/Interactive Music Hierarchy/: Default Work Unit.wwu  Music.wwu
Sample Project/Master-Mixer Hierarchy/: Default Work Unit.wwu
Sample Project/Mixing Sessions/: Default Work Unit.wwu
Sample Project/Presets/: Default Work Unit.wwu
Sample Project/Queries/: Default Work Unit.wwu  Factory Queries.wwu
Sample Project/SoundBanks/: Default Work Unit.wwu
Sample Project/Soundcaster Sessions/: Default Work Unit.wwu  Minigun.wwu  Music.wwu
Sample Project/States/: Default Work Unit.wwu  Music.wwu
Sample Project/Switches/: Default Work Unit.wwu  Footsteps.wwu  SS_Impact.wwu
Sample Project/Triggers/: Default Work Unit.wwu  Music.wwu
